<resources>
    <string name="app_name">Kotlin Compiler</string>
    <string name="no_project_selected">No project folder selected</string>
    <string name="pick_project_folder">Pick Project Folder</string>
    <string name="no_output_selected">No output folder selected</string>
    <string name="pick_output_folder">Pick Output Folder</string>
    <string name="build_apk">Build APK</string>
</resources>
